networking/argo-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argo-gateway
  namespace: argocd
spec:
  gatewayClassName: traefik
  listeners:
    - name: db-tcp
      protocol: TCP
      port: 6432
      allowedRoutes:
        namespaces:
          from: All
    - name: web
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure
      protocol: HTTPS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - name: internal-gauravity-com-tls
      allowedRoutes:
        namespaces:
          from: All
