networking/gauravity-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gauravity-route
  namespace: default
spec:
  parentRefs:
    - name: external-gateway
      namespace: default
      sectionName: websecure
  hostnames:
    - gauravity.com
    - www.gauravity.com
  rules:
    - backendRefs:
        - name: nginx-svc
          namespace: default
          port: 8356
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: listmonk-route
  namespace: default
spec:
  parentRefs:
    - name: external-gateway
      namespace: default
      sectionName: websecure
  hostnames:
    - listmonk.gauravity.com
  rules:
    - backendRefs:
        - name: listmonk-listmonk
          namespace: listmonk
          port: 80
